Fix uneven elements in main

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ body {
 	grid-template-rows: auto 1fr;
 	font-family: "Inter", system-ui, "Segoe UI", Roboto, Helvetica, Arial,
 		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	min-height: 100dvh;
 }
 
 .aside {
@@ -243,7 +244,6 @@ body {
 .main {
 	display: grid;
 	grid-template-columns: 2.75fr 1fr;
-	grid-template-rows: auto 1fr;
 	background-color: var(--main-bg-color);
 	padding: 32px 32px 16px 20px;
 	gap: 24px;
@@ -251,6 +251,8 @@ body {
 
 .main__projects {
 	grid-row: 1 / -1;
+	display: grid;
+	grid-template-rows: min-content 1fr;
 }
 
 .main__title {
@@ -260,7 +262,7 @@ body {
 
 .main__projects-container {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 	gap: 30px;
 	margin-top: 8px;
 }
@@ -308,6 +310,12 @@ body {
 	width: 25px;
 	height: 25px;
 	fill: var(--project-icon-color);
+}
+
+.main__side-content {
+	display: grid;
+	gap: 16px;
+	align-content: space-between;
 }
 
 .main__card--announcements {
